# ssosync

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl
cmd/: BUILD.bazel
internal/: BUILD.bazel  sync.go
internal/aws/: BUILD.bazel
internal/aws/mock/: BUILD.bazel
internal/config/: BUILD.bazel
internal/google/: BUILD.bazel
