load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aws",
    srcs = [
        "client.go",
        "config.go",
        "groups.go",
        "http.go",
        "schema.go",
        "users.go",
    ],
    importpath = "github.com/awslabs/ssosync/internal/aws",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "aws_test",
    srcs = [
        "client_test.go",
        "groups_test.go",
        "users_test.go",
    ],
    embed = [":aws"],
    deps = [
        "//internal/aws/mock",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//assert",
    ],
)
