load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "secrets.go",
    ],
    importpath = "github.com/awslabs/ssosync/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//service/secretsmanager",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    deps = [
        ":config",
        "@com_github_stretchr_testify//assert",
    ],
)
