load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "google",
    srcs = ["client.go"],
    importpath = "github.com/awslabs/ssosync/internal/google",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_api//admin/directory/v1:directory",
        "@org_golang_google_api//option",
        "@org_golang_x_oauth2//google",
    ],
)
